# mcp-webscraper

./: LICENSE  README.md  main.py  pyproject.toml
src/: format_output.py  scraper_tool.py
