[project]
name = "mcp-webscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.76.0",
    "playwright>=1.51.0",
    "pydantic>=2.11.3",
]
